<resources>
    <!-- App Name -->
    <string name="app_name">Dose Certa</string>
    
    <!-- Navigation -->
    <string name="nav_home">Início</string>
    <string name="nav_history">Histórico</string>
    <string name="nav_medications">Medicamentos</string>
    
...
